# src/openapi/api.yml
@@ -58,10 +58,13 @@ components:
         timestamp:
           type: string
           format: date-time
+      required:
+        - eventType
+        - roomId
       example:
         eventType: MOTION
         roomId: 1
-        timestamp: 2024-09-09T11:00:00.000+00:00
+        #timestamp: 2024-09-09T11:00:00.000+00:00
 
     Alarm:
       type: object
